<resources>
    <string name="app_name">SmartPlaylist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_name">SONG NAME</string>
    <string name="song_rank">1</string>
    <string name="song_artist">Artist</string>
    <string name="votes">17</string>
    <string name="link">PASTE YOUR LINK HERE</string>
    <string name="songadded">Song added to playlist</string>
    <string name="error">%1$s</string>
    <string name="Display">ArtistName</string>
    <string name="Display2">SongName</string>
    <string name="DisplaySname">Song Name</string>
    <string name="DisplayAname">Artist Name</string>
    <string name="DisplayVCount">View Count : 1,326,480,124</string>
    <string name="DisplayLCount">Likes Count : 93,25,876</string>
</resources>