<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        app:cardElevation="11dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        android:layout_margin="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_songname"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="1"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/song_name"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.19">


            </TextView>

            <TextView
                android:id="@+id/text_view_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_rank"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45" />

            <TextView
                android:id="@+id/text_view_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_artist"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_songname"
                app:layout_constraintVertical_bias="0.23000002" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_votes"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="6dp"
                app:cardUseCompatPadding="false"
                app:contentPadding="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.94"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_view__votes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/votes"
                    android:textAlignment="center"
                    android:textSize="34sp" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>